--- a/coursera.html
+++ b/coursera.html
@@ -78,6 +78,7 @@
             <button type="submit">Send Message</button>
         </form>
     </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
